<resources>
    <string name="app_name">SoftUser</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="select_gender">Select Gender</string>
    <string name="save">SAVE</string>
</resources>