<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddStudentFragment"
    android:orientation="vertical"
    android:padding="10dp">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:text="Student Details"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_name"
                    android:inputType="text"
                    android:textSize="20sp"
                    android:background="#FFF"
                    android:hint="@string/full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_age"
                    android:inputType="text"
                    android:textSize="20sp"
                    android:background="#FFF"
                    android:hint="@string/age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_marginTop="10dp"
                android:text="@string/select_gender"
                android:textStyle="italic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <RadioGroup
                android:layout_margin="7dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/rd_male"
                    android:text="@string/male"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/rd_female"
                    android:text="@string/female"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/rd_others"
                    android:text="@string/others"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </RadioGroup>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_address"
                    android:inputType="text"
                    android:textSize="20sp"
                    android:background="#FFF"
                    android:hint="@string/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/btn_save"
                android:layout_margin="10dp"
                android:text="@string/save"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>